deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: my-app
  template:
    metadata:
      labels:
        deployment: my-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/cicd-gustavo/my-app:latest
        imagePullPolicy: IfNotPresent
        name: my-app
        ports:
        - containerPort: 8080
          protocol: TCP
