route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  host: ''
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: my-app
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
